# adk-demo

./: .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/backend/: agents.py  agui_protocol.py  main.py  orchestrator.py
frontend/: Dockerfile  index.html
litellm/: Dockerfile  config.yaml
